@@ -128,6 +128,36 @@
 					<td>###OPINION###</td>
 				</tr>
 			<!--###FIELD_WRAPPER_OPINION### -->
+			<!--###FIELD_WRAPPER_UNIVERSAL_FIELD_1### -->
+				<tr>
+					<td>###LABEL_UNIVERSAL_FIELD_1###</td>
+					<td>###UNIVERSAL_FIELD_1###</td>
+				</tr>
+			<!--###FIELD_WRAPPER_UNIVERSAL_FIELD_1### -->
+			<!--###FIELD_WRAPPER_UNIVERSAL_FIELD_2### -->
+				<tr>
+					<td>###LABEL_UNIVERSAL_FIELD_2###</td>
+					<td>###UNIVERSAL_FIELD_2###</td>
+				</tr>
+			<!--###FIELD_WRAPPER_UNIVERSAL_FIELD_2### -->
+			<!--###FIELD_WRAPPER_UNIVERSAL_FIELD_3### -->
+				<tr>
+					<td>###LABEL_UNIVERSAL_FIELD_3###</td>
+					<td>###UNIVERSAL_FIELD_3###</td>
+				</tr>
+			<!--###FIELD_WRAPPER_UNIVERSAL_FIELD_3### -->
+			<!--###FIELD_WRAPPER_UNIVERSAL_FIELD_4### -->
+				<tr>
+					<td>###LABEL_UNIVERSAL_FIELD_4###</td>
+					<td>###UNIVERSAL_FIELD_4###</td>
+				</tr>
+			<!--###FIELD_WRAPPER_UNIVERSAL_FIELD_4### -->
+			<!--###FIELD_WRAPPER_UNIVERSAL_FIELD_5### -->
+				<tr>
+					<td>###LABEL_UNIVERSAL_FIELD_5###</td>
+					<td>###UNIVERSAL_FIELD_5###</td>
+				</tr>
+			<!--###FIELD_WRAPPER_UNIVERSAL_FIELD_5### -->
 		</table>
 	</td>
 
