@@ -1,4 +1,5 @@
 version 0.0.7 - currently working on
+- Added a few universal fields (#35)
 - Improved the flexform (#53)
 - Localized the error messages (#51)
 - Enhanced the indexing: The indexed page title in detail view is now the name of the person (#83)
